# estudo-chatbot

./: .env.example  .gitignore  CONTEXT.md  README.md  docker-compose.yml
.github/workflows/: cd.yml  ci.yml  frontend-deploy.yml
api/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
api/alembic/: env.py
api/alembic/versions/: a2b9c4e1f6d3_turn_metrics.py  a4d7e9c2f5b8_user_profile_fields.py  b2f7a1c9d4e0_cria_conversation_summaries.py  b6e3f8a1c4d2_turn_metric_breakdown.py  b7d1e6f3a9c2_biblioteca.py  c3a8e1f04b21_cria_documents_e_summaries.py  c8e2f5a1b9d4_turn_metrics_status_error_rag.py  d4f2a1b7c9e3_document_extraction_fields.py  d9a3f1c7e2b5_message_sources.py  e1b4c7f9a2d6_chunk_page.py  e311d14f419e_cria_tabelas_users_sessions_messages.py  e5c3d9a2b1f7_chunks_pgvector.py  f1a7b3c2d8e9_chunk_embedding_provenance.py  f6c34066d19e_summary_async.py
api/app/: adk_runtime.py  adk_session.py  agent.py  auth.py  chat.py  config.py  context.py  database.py  graph.py  jobs.py  llm.py  main.py  models.py  observability.py  runner.py  schemas.py  storage.py  worker.py
api/app/routers/: auth.py  chat.py  documents.py  metrics.py  summaries.py
api/app/tools/: __init__.py  contract.py  diagram.py  document_summary.py  extraction.py  rag.py  summarize.py  websearch.py
api/tests/: conftest.py  test_agent.py  test_auth.py  test_biblioteca.py  test_context.py  test_diagram.py  test_documents.py  test_extraction.py  test_main.py  test_metrics.py  test_observability.py  test_rag.py  test_sessions.py  test_summaries.py  test_summarize.py  test_summary_worker.py  test_tool_contract.py
docs/: CONTEXT.md  aws-runbook.md  decisoes-janela-contexto.md  handoff-entrega-final.md  inicializacao-local.md  issues-iniciais-contexto.md
scripts/: create-entrega-issues.sh  demo_sessions.sh  setup_ec2.sh
web/: .env.example  Dockerfile  index.html  nginx.conf  package-lock.json  package.json
web/src/: App.tsx  main.tsx
web/src/api/: client.ts
(+54 files in other folders)
