[project]
name = "thinkai-api"
version = "0.2.0"
description = "Backend de chatbot multiusuário com FastAPI + Google ADK + PostgreSQL"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "google-adk>=1.0.0",
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.0.0",
    "pydantic-settings>=2.5.0",
    "alembic>=1.18.4",
    "openai>=2.41.0",
]

[tool.uv]
package = false
