[project]
name = "thinkai-api"
version = "0.2.0"
description = "Backend de chatbot multiusuário com FastAPI + Google ADK + PostgreSQL"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "google-adk>=1.0.0",
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.0.0",
    "pydantic-settings>=2.5.0",
    "alembic>=1.18.4",
    "openai>=2.41.0",
    "boto3>=1.35.0",
    "python-multipart>=0.0.9",
    "pymupdf>=1.28.0",
    "pytesseract>=0.3.13",
    "pillow>=12.2.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=7.1.0",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
asyncio_mode = "auto"
